--- a/desayunos-arkus/angular.json
+++ b/desayunos-arkus/angular.json
@@ -35,6 +35,7 @@
             ],
             "styles": [
               
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
@@ -111,6 +112,7 @@
             ],
             "styles": [
               
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
