--- a/desayunos-arkus/package.json
+++ b/desayunos-arkus/package.json
@@ -35,6 +35,7 @@
     "primeicons": "^4.1.0",
     "primeng": "^12.2.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
