--- a/.github/workflows/devstable_desayunosarkus.yml
+++ b/.github/workflows/devstable_desayunosarkus.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@devstable
+      - uses: actions/checkout@v1
 
       - name: Set up Node.js version
         uses: actions/setup-node@v1
