--- a/desayunos-arkus/package.json
+++ b/desayunos-arkus/package.json
@@ -32,6 +32,7 @@
     "@fullcalendar/timegrid": "^5.10.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-cookie-service": "^12.0.3",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.1",
     "rxjs": "~6.6.0",
