--- a/desayunos-arkus/src/assets/configuration/config.json
+++ b/desayunos-arkus/src/assets/configuration/config.json
@@ -1,4 +1,4 @@
 {
-    "apiUrlDev": "https://localhost:44361",
+    "apiUrl": "https://localhost:44361",
     "apiUrlProd": "https://desayunosarkusnexus.eastus.cloudapp.azure.com"
 }
