--- a/desayunos-arkus/src/assets/configuration/config.json
+++ b/desayunos-arkus/src/assets/configuration/config.json
@@ -1,3 +1,4 @@
 {
-    "apiUrl": "https://desayunosarkusnexus.eastus.cloudapp.azure.com"
+    "apiUrl": "https://localhost:44361",
+    "apiUrlProd": "https://desayunosarkusnexus.eastus.cloudapp.azure.com"
 }
