--- a/desayunos-arkus/src/assets/configuration/config.json
+++ b/desayunos-arkus/src/assets/configuration/config.json
@@ -1,4 +1,5 @@
 {
     "apiUrlDev": "https://localhost:44361",
-    "apiUrl": "http://ec2-18-217-136-32.us-east-2.compute.amazonaws.com"
+    "apiUrlPord1": "http://ec2-18-216-110-135.us-east-2.compute.amazonaws.com",
+    "apiUrl": "http://66.175.236.212:5001"
 }
