--- a/desayunos-arkus/package.json
+++ b/desayunos-arkus/package.json
@@ -14,7 +14,6 @@
         "@angular/cdk": "^12.2.12",
         "@angular/common": "~12.2.0",
         "@angular/compiler": "~12.2.0",
-        "angular-file-upploader": "~12.2.0",
         "@angular/core": "~12.2.0",
         "@angular/forms": "~12.2.0",
         "@angular/material": "^12.2.12",
@@ -34,6 +33,7 @@
         "@sweetalert2/ngx-sweetalert2": "^10.0.0",
         "bootstrap": "^5.1.3",
         "jquery": "^3.6.0",
+        "ngx-captcha": "^11.0.0",
         "ngx-cookie-service": "^12.0.3",
         "primeicons": "^4.1.0",
         "primeng": "^12.2.1",
