--- a/desayunos-arkus/src/assets/configuration/config.json
+++ b/desayunos-arkus/src/assets/configuration/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://localhost:44361",
-  "apiUrlProd": "http://18.216.110.135"
+  "apiUrlDev": "https://localhost:44361",
+  "apiUrl": "http://18.216.110.135"
 }
